trunk/Archive2/82/2c221ab7d7c64b/output
main.cpp: In function 'int main()':
main.cpp:18:25: error: no matching function for call to 'std::basic_string<char>::push_back(const char [4])'
    str1.push_back ("abc");
                         ^
main.cpp:18:25: note: candidate is:
In file included from /usr/local/include/c++/4.9.2/string:52:0,
                 from main.cpp:3:
/usr/local/include/c++/4.9.2/bits/basic_string.h:1069:7: note: void std::basic_string<_CharT, _Traits, _Alloc>::push_back(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       push_back(_CharT __c)
       ^
/usr/local/include/c++/4.9.2/bits/basic_string.h:1069:7: note:   no known conversion for argument 1 from 'const char [4]' to 'char'
